# ProjectTime

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ProjectTime.code-workspace  ProjectTime.sln  README.md  assets  build.bat  openVS.bat  premake5.lua  run.bat  updateGit.bat
.github/workflows/: PT_MAUI.yml  buildWindows.yml  dart.yml  dotnet.yml
.swm/: create-window.1c7z45on.sw.md  readme.74jvv.sw.md  swimm.json  untitled-doc-2.ye2jqn3i.sw.md  untitled-doc.1c7z45on.sw.md
Core/: Core.cpp  Core.h  Core.vcxproj  Core.vcxproj.filters  cpp.hint
Core/include/: rang.hpp  wingdi.h
Core/src/: Logger.cpp  Logger.h
Core/src/Base/: Logger.cpp  (+1 more)
Oort/: AssemblyInfo.cpp  Oort.cpp  Oort.h  Oort.vcxproj  Oort.vcxproj.filters  app.aps
Oort/src/: Logger.h
OortSrc/: OortSRC.vcxproj
ProjectTime/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Core.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MauiProgram.cs  ProjectTime.csproj  ProjectTime.vcxproj  ProjectTime.vcxproj.filters  README.md  imgui.ini  premake5.lua  pubspec.yaml
ProjectTime/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  launchSettings.json
ProjectTime/lib/: Core.dart  Core.data.dart  Core.logger.dart  Themes.dart  main.config.dart  main.dart  main.router.dart  main.theme.dart  main.widget.dart
ProjectTime/linux/: CMakeLists.txt  my_application.cc
ProjectTime/src/: ProjectTime.cpp
ProjectTime/web/: index.html  manifest.json
ProjectTime/windows/: CMakeLists.txt
x64/Debug/: Core.idb  Core.lib  Oort.deps.json  Oort.dll.metagen
(+200 files in other folders)
